Remove cruft except Travis CI setup

--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,9 @@ copy = README.md
 -remove = Readme
 -remove = PruneCruft
 
+[PruneCruft]
+except = .travis.yml
+
 [PodSyntaxTests]
 
 [NextRelease]
